# boulder-dash

./: .gitattributes  .gitignore  Cargo.toml  NOTES  README.md  TODO  boulder-dash.sublime-project  build.rs
assets/models/dima/: dima.mtl
assets/shaders/: triangle.frag  triangle.vert
assets/shaders/cube/: cube.frag  cube.vert
assets/shaders/dima/: dima.frag
assets/shaders/triangle/: triangle.frag  triangle.vert
config/: display.ron
lib/gl/: Cargo.toml  build.rs
src/: buffers.rs  camera.rs  main.rs  pong.rs  render_gl.rs  resources.rs  shader.rs  texture.rs
src/systems/: paddle.rs
