[package]
name = "boulder-dash"
version = "0.1.0"
authors = ["Ivan Ivanov <ivan@ivanovs.info>"]
edition = "2018"

[dependencies]
sdl2 = { version = "0.32.2", features = ["bundled"] }
gl = { path = "lib/gl" }
failure = "0.1.6"
stb_image = "0.2.2"
nalgebra-glm = "0.5.0"

[build-dependencies]
walkdir = "2.2.9"

[features]
default = []
debug = []
